--- a/src/index-page.html
+++ b/src/index-page.html
@@ -158,7 +158,7 @@
 
                 <!---->
                 <div class="our-service-slider__el">
-                    <img src="assets/images/learn-yachting.jpg" title="" alt="">
+                    <img src="assets/images/learn-yachting.jpg" title="Отдых на яхте" alt="">
                     <div class="our-service-slider__el-title">
                         <h3>обучение яхтингу</h3>
                         <a href="#" class="more-btn">
@@ -169,7 +169,7 @@
 
                 <!---->
                 <div class="our-service-slider__el">
-                    <img src="assets/images/rent-yacht.jpg" title="" alt="">
+                    <img src="assets/images/rent-yacht.jpg" title="Отдых на яхте" alt="">
                     <div class="our-service-slider__el-title">
                         <h3> Аренда яхт</h3>
                         <a href="#" class="more-btn">
@@ -180,7 +180,7 @@
 
                 <!---->
                 <div class="our-service-slider__el">
-                    <img src="assets/images/learn-yachting.jpg" title="" alt="">
+                    <img src="assets/images/learn-yachting.jpg" title="Отдых на яхте" alt="">
                     <div class="our-service-slider__el-title">
                         <h3>обучение яхтингу</h3>
                         <a href="#" class="more-btn">
@@ -489,87 +489,167 @@
         <h2>Фотогалерея</h2>
 
         <div class="photo-gallery-slider">
-
             <!---->
             <div class="photo-gallery-slider__el">
-                <div class="photo-gallery-slider__el-half">
-                    <a href="assets/images/remove/photo-gallery_1.jpg" rel="photo-gallery" class="fancybox">
-                        <img src="assets/images/remove/photo-gallery_1.jpg" alt="" title="">
-                    </a>
-                </div>
-                <div class="photo-gallery-slider__el-half">
-                    <a href="assets/images/remove/photo-gallery_2.jpg" rel="photo-gallery" class="fancybox">
-                        <img src="assets/images/remove/photo-gallery_2.jpg" alt="" title="">
-                    </a>
-                </div>
+                <a href="assets/images/remove/photo-gallery_1.jpg" rel="photo-gallery" class="fancybox"
+                   title="Отдых на яхте">
+                    <img src="assets/images/remove/photo-gallery_1.jpg" alt="" title="Отдых на яхте">
+                    <div class="photo-gallery-slider__el-overlay"></div>
+                </a>
             </div>
 
             <!---->
             <div class="photo-gallery-slider__el">
-                <div class="photo-gallery-slider__el-half">
-                    <a href="assets/images/remove/photo-gallery_3.jpg" rel="photo-gallery" class="fancybox">
-                        <img src="assets/images/remove/photo-gallery_3.jpg" alt="" title="">
-                    </a>
-                </div>
-                <div class="photo-gallery-slider__el-half">
-                    <a href="assets/images/remove/photo-gallery_1.jpg" rel="photo-gallery" class="fancybox">
-                        <img src="assets/images/remove/photo-gallery_1.jpg" alt="" title="">
-                    </a>
-                </div>
+                <a href="assets/images/remove/photo-gallery_2.jpg" rel="photo-gallery" class="fancybox"
+                   title="Отдых на яхте">
+                    <img src="assets/images/remove/photo-gallery_2.jpg" alt="" title="Отдых на яхте">
+                    <div class="photo-gallery-slider__el-overlay"></div>
+                </a>
             </div>
 
             <!---->
             <div class="photo-gallery-slider__el">
-                <div class="photo-gallery-slider__el-half">
-                    <a href="assets/images/remove/photo-gallery_2.jpg" rel="photo-gallery" class="fancybox">
-                        <img src="assets/images/remove/photo-gallery_2.jpg" alt="" title="">
-                    </a>
-                </div>
-                <div class="photo-gallery-slider__el-half">
-                    <a href="assets/images/remove/photo-gallery_3.jpg" rel="photo-gallery" class="fancybox">
-                        <img src="assets/images/remove/photo-gallery_3.jpg" alt="" title="">
-                    </a>
-                </div>
+                <a href="assets/images/remove/photo-gallery_1.jpg" rel="photo-gallery" class="fancybox"
+                   title="Отдых на яхте">
+                    <img src="assets/images/remove/photo-gallery_1.jpg" alt="" title="Отдых на яхте">
+                    <div class="photo-gallery-slider__el-overlay"></div>
+                </a>
             </div>
 
             <!---->
             <div class="photo-gallery-slider__el">
-                <div class="photo-gallery-slider__el-half">
-                    <a href="assets/images/remove/photo-gallery_1.jpg" rel="photo-gallery" class="fancybox">
-                        <img src="assets/images/remove/photo-gallery_1.jpg" alt="" title="">
-                    </a>
-                </div>
-                <div class="photo-gallery-slider__el-half">
-                    <a href="assets/images/remove/photo-gallery_2.jpg" rel="photo-gallery" class="fancybox">
-                        <img src="assets/images/remove/photo-gallery_2.jpg" alt="" title="">
-                    </a>
-                </div>
+                <a href="assets/images/remove/photo-gallery_2.jpg" rel="photo-gallery" class="fancybox"
+                   title="Отдых на яхте">
+                    <img src="assets/images/remove/photo-gallery_2.jpg" alt="" title="Отдых на яхте">
+                    <div class="photo-gallery-slider__el-overlay"></div>
+                </a>
             </div>
 
             <!---->
             <div class="photo-gallery-slider__el">
-                <div class="photo-gallery-slider__el-half">
-                    <a href="assets/images/remove/photo-gallery_3.jpg" rel="photo-gallery" class="fancybox">
-                        <img src="assets/images/remove/photo-gallery_3.jpg" alt="" title="">
-                    </a>
+                <a href="assets/images/remove/photo-gallery_1.jpg" rel="photo-gallery" class="fancybox"
+                   title="Отдых на яхте">
+                    <img src="assets/images/remove/photo-gallery_1.jpg" alt="" title="Отдых на яхте">
+                    <div class="photo-gallery-slider__el-overlay"></div>
+                </a>
+            </div>
+
+            <!---->
+            <div class="photo-gallery-slider__el">
+                <a href="assets/images/remove/photo-gallery_1.jpg" rel="photo-gallery" class="fancybox"
+                   title="Отдых на яхте">
+                    <img src="assets/images/remove/photo-gallery_1.jpg" alt="" title="Отдых на яхте">
+                    <div class="photo-gallery-slider__el-overlay"></div>
+                </a>
+            </div>
+
+            <!---->
+            <div class="photo-gallery-slider__el">
+                <a href="assets/images/remove/photo-gallery_1.jpg" rel="photo-gallery" class="fancybox"
+                   title="Отдых на яхте">
+                    <img src="assets/images/remove/photo-gallery_1.jpg" alt="" title="Отдых на яхте">
+                    <div class="photo-gallery-slider__el-overlay"></div>
+                </a>
+            </div>
+
+            <!---->
+            <div class="photo-gallery-slider__el">
+                <a href="assets/images/remove/photo-gallery_2.jpg" rel="photo-gallery" class="fancybox"
+                   title="Отдых на яхте">
+                    <img src="assets/images/remove/photo-gallery_2.jpg" alt="" title="Отдых на яхте">
+                    <div class="photo-gallery-slider__el-overlay"></div>
+                </a>
+            </div>
+
+            <!---->
+            <div class="photo-gallery-slider__el">
+                <a href="assets/images/remove/photo-gallery_1.jpg" rel="photo-gallery" class="fancybox"
+                   title="Отдых на яхте">
+                    <img src="assets/images/remove/photo-gallery_1.jpg" alt="" title="Отдых на яхте">
+                    <div class="photo-gallery-slider__el-overlay"></div>
+                </a>
+            </div>
+
+            <!---->
+            <div class="photo-gallery-slider__el">
+                <a href="assets/images/remove/photo-gallery_2.jpg" rel="photo-gallery" class="fancybox"
+                   title="Отдых на яхте">
+                    <img src="assets/images/remove/photo-gallery_2.jpg" alt="" title="Отдых на яхте">
+                    <div class="photo-gallery-slider__el-overlay"></div>
+                </a>
+            </div>
+        </div>
+    </div><!-- /photo-gallery -->
+
+    <!-- seo-text -->
+    <div class="seo-text">
+        <div class="container">
+            <h2>Seo текст</h2>
+
+            <p>
+                Seo текст is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the
+                1500s, when an unknown printer took a galley of type and scrambled it
+                to make a type specimen book. It has survived not only five centuries,
+                but also the leap into electronic typesetting, remaining essentially
+                unchanged. It was popularised in the 1960s with the release of Letraset
+                sheets containing Lorem Ipsum passages, and more
+            </p>
+        </div>
+    </div><!-- seo-text -->
+
+    <div class="map-wrap">
+        <div class="map" id="map"></div>
+        <div class="map-info-wrap">
+            <div class="map-info">
+                <div class="map-info__adress">
+                    Минская область, Минский район,<br>
+                    Ждановичский с/с, 48/2,<br>
+                    район д. Заречье-1
                 </div>
-                <div class="photo-gallery-slider__el-half">
-                    <a href="assets/images/remove/photo-gallery_1.jpg" rel="photo-gallery" class="fancybox">
-                        <img src="assets/images/remove/photo-gallery_1.jpg" alt="" title="">
-                    </a>
+                <div class="map-info__contacts">
+                    <a href="tel:+375296960203" class="map-info__contacts-phone">+375 (29) 696-02-03</a>
+                    <a href="mailto:info@iyc.by" class="map-info__contacts-mail">info@iyc.by</a>
+                    <a href="skype:iycenter" class="map-info__contacts-skype">iycenter</a>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- - - - - - - - - - footer - - - - - - - - - -->
-    <div class="footer">
-
-    </div><!-- /footer -->
+    //= templates/footer.html
 
     <script src="assets/js/libs.js"></script>
     <script src="assets/js/jquery-scripts.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script>
+
+        var centerCoord = [53.96086591802116, 27.399534636980718],
+
+            myMap;
+        ymaps.ready(function () {
+            myMap = new ymaps.Map('map', {
+                center: centerCoord,
+                zoom: 14,
+                controls: []
+            }, {
+                searchControlProvider: 'yandex#search'
+            });
+
+
+            myPlacemark = new ymaps.Placemark([53.96086591802116, 27.399534636980718], {
+                iconCaption: 'Заречье-1'
+            }, {
+                preset: 'islands#blueCircleDotIcon',
+
+            });
+
+            myMap.behaviors.disable("scrollZoom");
+            myMap.geoObjects.add(myPlacemark);
+        });
+
+    </script>
 </body>
 
 </html>
