--- a/src/index-page.html
+++ b/src/index-page.html
@@ -1,78 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-    <meta charset="UTF-8">
-    <title>TITLE</title>
-
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="format-detection" content="address=no">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="assets/css/desktop.css">
-    <link rel="stylesheet" href="assets/css/tablet.css">
-    <link rel="stylesheet" href="assets/css/mobile.css">
-
-    <!-- favicon -->
-
-    <!--[if IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-</head>
-
-<body>
-<!-- - - - - - - - - - header - - - - - - - - - -->
-<div class="header">
-    <div class="container header__inner">
-        <div class="header-logo">
-            <img src="assets/images/logo.png" alt="">
-            <div class="logo__info">
-                Международный<br>
-                яхтенный центр<br>
-                в Минске
-            </div>
-        </div>
-
-        <div class="header-nav">
-            <ul>
-                <li class="active">
-                    <a href="#">Услуги</a>
-                    <ul>
-                        <li><a href="#">Обучение яхтингу</a></li>
-                        <li class="active"><a href="#">Регаты</a></li>
-                        <li><a href="#">Регаты</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Аренда яхт</a></li>
-                <li><a href="#">Продажа яхт</a></li>
-                <li><a href="#">Мероприятия</a></li>
-                <li><a href="#">О нас</a>
-                    <ul>
-                        <li><a href="#">Подменю 1</a></li>
-                        <li><a href="#">Подменю 2</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-        </div>
-
-        <div class="recall">
-            <div class="recall-main-phone">
-                <a href="tel:+375296960203">+375 (29) 696-02-03</a>
-            </div>
-            <div class="recall-phones">
-                <a href="tel:+375296960203" class="recall-phones__phone">+375 (29) 696-02-03</a>
-                <a href="tel:+375296960203" class="recall-phones__phone">+375 (29) 696-02-03</a>
-                <a href="tel:+375296960203" class="recall-phones__phone">+375 (29) 696-02-03</a>
-            </div>
-            <a href="#" class="recall-link">Заказать обратный звонок</a>
-        </div>
-
-    </div>
-</div><!-- /header -->
+//= templates/header.html
 
 <div class="wrapper">
 
@@ -598,6 +524,7 @@
         </div>
     </div><!-- seo-text -->
 
+    <!-- map-wrap -->
     <div class="map-wrap">
         <div class="map" id="map"></div>
         <div class="map-info-wrap">
@@ -614,42 +541,39 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div><!-- map-wrap -->
+</div><!-- wrapper -->
 
-    <!-- - - - - - - - - - footer - - - - - - - - - -->
-    //= templates/footer.html
+//= templates/footer.html
 
-    <script src="assets/js/libs.js"></script>
-    <script src="assets/js/jquery-scripts.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-    <script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+<script>
 
-        var centerCoord = [53.96086591802116, 27.399534636980718],
+    var centerCoord = [53.96086591802116, 27.399534636980718],
 
-            myMap;
-        ymaps.ready(function () {
-            myMap = new ymaps.Map('map', {
-                center: centerCoord,
-                zoom: 14,
-                controls: []
-            }, {
-                searchControlProvider: 'yandex#search'
-            });
-
-
-            myPlacemark = new ymaps.Placemark([53.96086591802116, 27.399534636980718], {
-                iconCaption: 'Заречье-1'
-            }, {
-                preset: 'islands#blueCircleDotIcon',
-
-            });
-
-            myMap.behaviors.disable("scrollZoom");
-            myMap.geoObjects.add(myPlacemark);
+        myMap;
+    ymaps.ready(function () {
+        myMap = new ymaps.Map('map', {
+            center: centerCoord,
+            zoom: 14,
+            controls: []
+        }, {
+            searchControlProvider: 'yandex#search'
         });
 
-    </script>
+
+        myPlacemark = new ymaps.Placemark([53.96086591802116, 27.399534636980718], {
+            iconCaption: 'Заречье-1'
+        }, {
+            preset: 'islands#blueCircleDotIcon',
+
+        });
+
+        myMap.behaviors.disable("scrollZoom");
+        myMap.geoObjects.add(myPlacemark);
+    });
+
+</script>
 </body>
 
 </html>
