--- a/src/index-page.html
+++ b/src/index-page.html
@@ -308,7 +308,7 @@
     </div><!-- /test-lessons -->
 
     <!-- faqs -->
-    <div class="faqs">
+    <div class="faqs faqs__index-page">
         <div class="container">
             <h2>Часто задаваемые вопросы</h2>
 
@@ -508,7 +508,7 @@
     </div><!-- /photo-gallery -->
 
     <!-- seo-text -->
-    <div class="seo-text">
+    <div class="seo-text seo-text__index-page">
         <div class="container">
             <h2>Seo текст</h2>
 
