--- a/src/learn.html
+++ b/src/learn.html
@@ -87,7 +87,7 @@
                                 <img src="assets/images/cost-sailboat.png" alt="">
                             </div>
                             <div class="cost-learning-slider__title">
-                                Обучение на моторную яхту составляет <b>1 500 евро</b>
+                                Обучение на парусную яхту составляет <b>1 300 евро</b>
                             </div>
                             <ul>
                                 <li>теоретический курс в Минске;</li>
@@ -110,7 +110,7 @@
                                 <img src="assets/images/cost-motoboat.png" alt="">
                             </div>
                             <div class="cost-learning-slider__title">
-                                Обучение на моторную яхту составляет <b>1 300 евро</b>
+                                Обучение на моторную яхту составляет <b>1 500 евро</b>
                             </div>
                             <ul>
                                 <li>теоретический курс в Минске;</li>
@@ -132,7 +132,7 @@
                                 <img src="assets/images/cost-sailboat.png" alt="">
                             </div>
                             <div class="cost-learning-slider__title">
-                                Обучение на моторную яхту составляет <b>1 500 евро</b>
+                                Обучение на парусную яхту составляет <b>1 300 евро</b>
                             </div>
                             <ul>
                                 <li>теоретический курс в Минске;</li>
@@ -222,8 +222,7 @@
             <div class="container">
                 <div class="IYC-center-inner">
                     <div class="IYC-center__video">
-                        <iframe width="100%" height="296"
-                                src="https://www.youtube.com/embed/nJyofgnWFI8"
+                        <iframe width="100%" height="296" src="https://www.youtube.com/embed/nJyofgnWFI8"
                                 gesture="media" allow="encrypted-media" allowfullscreen>
                         </iframe>
                     </div>
@@ -378,23 +377,12 @@
                                 Максим Белькевич
                             </div>
                             <div class="employers__person-title">
-                                Капитан-инструктор.
+                                Сертифицированный инструктор IYT
                             </div>
                         </div>
                         <div class="employers__contacts">
                             <a href="tel:+375290000000" class="employers__link">+375 29 000 00 00</a>
                             <a href="mailto:youname@site.by" class="employers__link-mail">youname@site.by</a>
-                            <div class="employers__social">
-                                <a href="#">
-                                    <img src="assets/images/social/facebook-employers.png" alt="">
-                                </a>
-                                <a href="#">
-                                    <img src="assets/images/social/vk-employers.png" alt="">
-                                </a>
-                                <a href="#">
-                                    <img src="assets/images/social/instagram-employers.png" alt="">
-                                </a>
-                            </div>
                         </div>
                     </div>
 
@@ -408,25 +396,12 @@
                                 Максим Белькевич
                             </div>
                             <div class="employers__person-title">
-                                Капитан-инструктор.<br>
-                                Мастер спорта РБ по парусному спорту.
+                                Сертифицированный инструктор IYT
                             </div>
                         </div>
                         <div class="employers__contacts">
                             <a href="tel:+375290000000" class="employers__link">+375 29 000 00 00</a>
-                            <a href="tel:+375290000000" class="employers__link">+375 29 000 00 00</a>
                             <a href="mailto:youname@site.by" class="employers__link-mail">youname@site.by</a>
-                            <div class="employers__social">
-                                <a href="#">
-                                    <img src="assets/images/social/facebook-employers.png" alt="">
-                                </a>
-                                <a href="#">
-                                    <img src="assets/images/social/vk-employers.png" alt="">
-                                </a>
-                                <a href="#">
-                                    <img src="assets/images/social/instagram-employers.png" alt="">
-                                </a>
-                            </div>
                         </div>
                     </div>
 
@@ -440,23 +415,12 @@
                                 Максим Белькевич
                             </div>
                             <div class="employers__person-title">
-                                Капитан-инструктор.
+                                Сертифицированный инструктор IYT
                             </div>
                         </div>
                         <div class="employers__contacts">
                             <a href="tel:+375290000000" class="employers__link">+375 29 000 00 00</a>
                             <a href="mailto:youname@site.by" class="employers__link-mail">youname@site.by</a>
-                            <div class="employers__social">
-                                <a href="#">
-                                    <img src="assets/images/social/facebook-employers.png" alt="">
-                                </a>
-                                <a href="#">
-                                    <img src="assets/images/social/vk-employers.png" alt="">
-                                </a>
-                                <a href="#">
-                                    <img src="assets/images/social/instagram-employers.png" alt="">
-                                </a>
-                            </div>
                         </div>
                     </div>
                 </div>
