--- a/src/sitemap.html
+++ b/src/sitemap.html
@@ -18,12 +18,15 @@
         <div class="sitemap container">
             <ul>
                 <li><a href="index-page.html">Главная</a></li>
-                <li><a href="services.html">Наши услуги</a></li>
-                <li><a href="learn.html">Обучение яхтингу</a></li>
-                <li><a href="rent.html">Аренда яхт</a></li>
-                <li><a href="sale.html">Продажа яхт</a>
+                <li><a href="services.html">Наши услуги</a>
                     <ul>
-                        <li><a href="card.html">Карточка товара</a></li>
+                        <li><a href="learn.html">Обучение яхтингу</a></li>
+                        <li><a href="rent.html">Аренда яхт</a></li>
+                        <li><a href="sale.html">Продажа яхт</a>
+                            <ul>
+                                <li><a href="card.html">Карточка товара</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li><a href="events.html">Мероприятия</a>
@@ -34,8 +37,11 @@
                 <li><a href="about.html">О компании</a></li>
                 <li><a href="employers.html">Сотрудники</a></li>
                 <li><a href="FAQs.html">Часто задаваемые вопросы</a></li>
-                <li><a href="news.html">Новости</a></li>
-                <li><a href="news-more.html">Новости внутренняя</a></li>
+                <li><a href="news.html">Новости</a>
+                    <ul>
+                        <li><a href="news-more.html">Новости внутренняя</a></li>
+                    </ul>
+                </li>
                 <li><a href="guide.html">Справочник яхтсмена</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
                 <li><a href="sitemap.html">Карта сайта</a></li>
